--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.45</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
